<resources>
    <string name="app_name">News App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist_name">ARTIST NAME</string>
    <string name="content_name">CONTENT_NAME</string>
    <string name="track_price">TRACK_PRICE</string>

    <string name="name">name</string>
    <string name="brewery_type">brewery_type</string>
    <string name="street_address_2_address_3">street_address_2_address_3</string>
    <string name="county_province">county_province</string>
    <string name="postal_code">postal_code</string>
    <string name="country">country</string>
    <string name="author">Author</string>
    <string name="content">content</string>
    <string name="title">title</string>
    <string name="authors_name">author</string>
    <string name="date">date</string>
    <string name="has_more_url">has more url</string>
    <string name="url">URL</string>
    <string name="time">Time</string>
</resources>